# REACH

./: .gitignore  .gitmodules  Dockerfile  Modelfile  README.md  docker-compose.yml  mac-install.sh  mac-reach-install.sh  pyproject.toml  requirements.txt  setup.py  windows-install.ps1
.github/workflows/: docker-build-push.yml  llama-cpp-update.yml  mac-script-test.yml  windows-script-test.yml
backend/: config.json  requirements.txt  server.py
frontend/: index.html  scripts.js  styles.css
llama-cpp/: server
llama-cpp/common/: build-info.cpp
reach-app/: package-lock.json  package.json
reach-app-grid/: Dockerfile  package-lock.json  package.json
reach-app-grid/src/: App.js  index.js  styles.scss
reach-app/src/: App.css  App.js
reach-next-app/: package-lock.json  package.json  tailwind.config.ts
reach-react-app/: package-lock.json  package.json
reach-react-app/src/: App.css  App.js  index.js
reach_core/: lats_proto.py  lats_proto_actor.py  lats_proto_supervisor.py  prompts.py  utils.py
reach_core/config/: config.py
reach_core/context/: compression.py
reach_core/llm_provider/: __init__.py
reach_core/master/: agent.py  functions.py  prompts.py
reach_core/memory/: embeddings.py
reach_core/report_type/: __init__.py
reach_core/scraper/: scraper.py
reach_core/utils/: enum.py  hubspot_functions.py  llm.py  mp3_from_mp4.py  unstructured_functions.py  websocket_manager.py  whisper_functions.py
reach_experiments/: lats_proto_actor.py  lats_proto_supervisor.py  utils.py
scraping/: scrape_skills.py  web_scrape.py
(+70 files in other folders)
