[tool.poetry]
name = "reach"
version = "0.0.1"
description = "the ai consultant"
authors = ["will bryan <will.bryan421@gmail.com>"]
license = "proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.2"
bandit = "^1.7.7"
flake8 = "^7.0.0"
black = "^24.2.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
